--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
-Revision history for Perl extension Bundle::Encode.
+Revision history for Perl extension Bundle-Encode-0.03.
 
-0.01  Tue Apr 17 22:36:23 2007
-	- original version; created by h2xs 1.23 with options
-		-AXcfn Bundle::Encode
+0.03  Sun Apr 29 00:50:37 2007
+	- third version; created by h2xs 1.23 with options
+		-AXcfn Bundle-Encode
 
