Import of SKI/Bundle-Encode-0.04 from CPAN.
gitpan-cpan-distribution: Bundle-Encode
gitpan-cpan-version:      0.04
gitpan-cpan-path:         SKI/Bundle-Encode-0.04.tar.gz
gitpan-cpan-author:       SKI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
-Revision history for Perl extension Bundle-Encode-0.03.
+Revision history for Perl extension Bundle::Encode.
 
-0.03  Sun Apr 29 00:50:37 2007
-	- third version; created by h2xs 1.23 with options
-		-AXcfn Bundle-Encode
+0.04  Sat Jun  2 03:32:01 2007
+	- original version; created by h2xs 1.23 with options
+		-AXcfn Bundle::Encode
 
