--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Bundle-Encode version 0.03
-===============================
+Bundle-Encode version 0.04
+==========================
 
 
 INSTALLATION
@@ -11,9 +11,15 @@ To install this module type the following:
    make test
    make install
 
+DEPENDENCIES
+
+This module requires these other modules and libraries:
+
+  none
 
 COPYRIGHT AND LICENCE
 
+Put the correct copyright and licence information here.
 
 Copyright (C) 2007 by Kevin W. Henwood
 
